[package]
authors = ["ari7 <ari7even@gmail.com>"]
build = "src/build.rs"
name = "bcrypt-bsd"
version = "0.1.0"

description = "Rust wrapper around BCrypt implementation in C"
keywords = ["bcrypt", "cryptography", "hash"]
categories = ["cryptography"]
license = "MIT"

[build-dependencies]
gcc = "0.3.54"

[dependencies]
libc = "0.2.31"
rand = "0.3.16"
