[package]
authors = ["ari7 <ari7even@gmail.com>"]
build = "src/build.rs"
name = "bcrypt-bsd"
version = "0.1.3"
readme = "README.md"
description = "Rust wrapper around BCrypt implementation in C, fully compatible with OpenBSD bcrypt"
keywords = ["bcrypt", "cryptography", "hash"]
categories = ["cryptography"]
license = "MIT"
repository = "https://github.com/ari7/bcrypt-bsd"
homepage = "https://github.com/ari7/bcrypt-bsd"

[build-dependencies]
gcc = "0.3.54"

[dependencies]
libc = "0.2.31"
rand = "0.3.16"
